Fixed minor spacing issue on homepage

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -23,7 +23,7 @@
   }
 
   .intro-links {
-    margin-top: 3rem;
+    margin-top: 1rem;
     gap: 5rem;
   }
 
